Added events and updated landing page

--- a/index.html
+++ b/index.html
@@ -97,15 +97,17 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925"
-              target="_blank" style="color:#FFFFFF;">Annamayya Sangeetha Janaranjani
-              Live Link</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link " href="OurTeam.html" style="color:#FFFFFF;">OUR TEAM</a>
+          <li class="nav-item dropdown">
+            <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeam" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              OUR TEAM
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
+              <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
+              <a class="dropdown-item" href="Events.html">VIEW OUR PAST EVENTS</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
@@ -124,36 +126,42 @@
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
+              <a href="Events.html">
+                <img style="display: block;position: relative;height: 900px;width:1250px;" src="images/WorldMusicDay.jpg">
+              </a>
+            </div>
+            <div class="carousel-item ">
               <div>
 
                 <a href="AboutUs.html">
                   <img src="images/Gurus.jpg">
 
                   <div class="centered">
-                      <div class="transbox" style="display: block;position: relative;height: 900px;width:1250px;">
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    &nbsp;
-                    &nbsp;
+                    <div class="transbox" style="display: block;position: relative;height: 900px;width:1250px;">
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      &nbsp;
+                      &nbsp;
                       <p style="font-family:'Alegreya';font-size:3vw;color:#FFFFFF; text-align: center;">
                         <b>Carrying forward a legacy...
                       </p>
                       <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
-                        <i>We at Sangeetha Bharathi belong to Thyagaraja's shishya parampara and <br/>
-                          continue to uphold this tradition of Music for Bhakthi and Salvation and  <br/>
+                        <i>We at Sangeetha Bharathi belong to Thyagaraja's shishya parampara and <br />
+                          continue to uphold this tradition of Music for Bhakthi and Salvation and <br />
                           teach our students that Music is divine and has to be learnt with Bhakthi and dedication.</i>
                         </b>
                       </p>
@@ -167,34 +175,34 @@
                 <a href="OurTeam.html">
                   <img src="images/Spread.jpg" style="height: 900px;width:1250px;">
                   <div class="centered">
-                      <div class="transbox" style="display: block;position: relative;height: 1100px;width:1250px;">
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          <br/>
-                          &nbsp;
-                          &nbsp;
-                    <p style="font-family:'Alegreya';font-size:3vw;color:#FFFFFF;text-align: center;" >
-                      <b>Spreading Our Wings
-                    </p>
-                    <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
-                      <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back 
-                          <br/>at Auckland, Newzealand. Over the years, it grew like a river with a prestige that 
-                          <br/>students live music when they learn at Sangeetha Bharathi.</i>
-                      </b>
-                    </p>
+                    <div class="transbox" style="display: block;position: relative;height: 1100px;width:1250px;">
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      <br />
+                      &nbsp;
+                      &nbsp;
+                      <p style="font-family:'Alegreya';font-size:3vw;color:#FFFFFF;text-align: center;">
+                        <b>Spreading Our Wings
+                      </p>
+                      <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
+                        <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back
+                          <br />at Auckland, Newzealand. Over the years, it grew like a river with a prestige that
+                          <br />students live music when they learn at Sangeetha Bharathi.</i>
+                        </b>
+                      </p>
                     </div>
                   </div>
                 </a>
