--- a/index.html
+++ b/index.html
@@ -129,12 +129,14 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active" >
+            <div class="carousel-item active">
               <a href="https://zoom.us/j/7887129906" target="_blank">
                 <img style="max-width:100%;max-height:100%;" src="images/WorldMusicDay.jpg">
               </a>
-              <p style="text-align:center;">We made it to Make Music Australia! <a href="https://makemusicaustralia.org.au/event/a-retrospect-of-world-music/" target="_blank">Have a look</a></p>
-              <a href="https://zoom.us/j/7887129906" target="_blank">Click here to join</a>
+              <p style="text-align:center;">We made it to Make Music Australia! <a href="https://makemusicaustralia.org.au/event/a-retrospect-of-world-music/"
+                  target="_blank">Have a look</a>
+                <a href="https://zoom.us/j/7887129906" target="_blank">Click here to join</a>
+              </p>
             </div>
             <div class="carousel-item ">
               <div>
