--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <img style="max-width:100%;max-height:100%;" src="images/WorldMusicDay.jpg">
               </a>
               <p style="text-align:center;">We made it to Make Music Australia! <a href="https://makemusicaustralia.org.au/event/a-retrospect-of-world-music/"
-                  target="_blank">Have a look</a>
+                  target="_blank">Have a look</a><br/>
                 <a href="https://zoom.us/j/7887129906" target="_blank">Click here to join</a>
               </p>
             </div>
