--- a/Events.html
+++ b/Events.html
@@ -122,7 +122,33 @@
         </div>
     </div>
 
-    <table class="table table-striped" style="width:100%;text-align:center;font-family:'Lato';">
+    <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
+        <tr style="text-align:center;">
+            <td colspan="2">
+                <h5><mark>Parupalli Ramakrishnaiah pantulu gari 69th Aradhanotsavams</mark></h5>
+            </td>
+        </tr>
+        <tr style="text-align:center;">
+            <td>
+                <iframe width="560" height="315" src="images/AradhanaInvitation.pdf" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen style="box-shadow: 2px 2px 3px pink;border-radius: 14px;"></iframe>
+            </td>
+            <td style="text-align:justify;">
+                <p>
+                    <b>Sadguru Tyagaraja Swamy Prasishyulu "Sangeetha Vidvadvaggeyakaraka" Susarla Dakshinamurthy 
+                    Sastrula vari 103 rd & "Gayaka Sarvabhowma"
+                    "Bharathi Teerthopadhyaya" Parupalli Ramakrishnaiah pantulu gari 69th Aradhanotsavams
+                    24th June to 26th June 2020 6.30 p.m. to 8 p.m       
+                    Program Schedule</b>
+                    <ul>
+                        <li>24th June 2020<br/>Smt Umaradha - Vocal Sri G.D. Phani Kumar - Flute, Smt Ch. Santhi - Vocal, Sri Hemadri Chandrakanth - Vocal, Sri P. Nandakumar - Vocal, Sri Sistla Natarajamurthy - Vocal, Smt Tulasi Viswanath - Vocal</li>
+                        <li>25th June 2020<br/>Smt Kanaka Durga - Veena, Smt Padma Govardhan - Vocal, Sri DVK Vasudevan - Violin, Smt BV Durgabhavani - Vocal, Sri G Sateeshbabu - Vocal, Smt P Janaki - Vocal</li>
+                        <li>26th June 2020<br/>Smt Kanaka Durga - Veena, Smt Padma Govardhan - Vocal, Sri DVK Vasudevan - Violin, Smt BV Durgabhavani - Vocal, Sri G Sateeshbabu - Vocal, Smt P Janaki - Vocal</li>
+                    </ul>
+                    
+                </p>
+            </td>
+        </tr>
         <tr>
             <td colspan="2">
                 <h5><mark>World Music Day Celebrations</mark></h5>
@@ -134,18 +160,22 @@
                     src="images/WorldMusicDay.jpg">
             </td>
             <td style="vertical-align:center;text-align:justify;">
-                <u><i>An "out of the world" experience</i></u><br/>
+                <u><i>An "out of the world" experience</i></u><br />
                 To commemorate World Music day on the 21st of June, Sangeetha Bharathi and Janaranjani, Sydney
                 will be jointly presenting a music conference on Zoom.
-                The conference will have dignitary participants from around the world 
+                The conference will have dignitary participants from around the world
                 and will present on important topics such as different musical systems. <br />
                 <i>Some of the presenters include:</i><br />
                 <ul>
                     <b>
-                        <li><a href="https://www.sydney.edu.au/music/about/our-people/academic-staff/anna-reid.html" target="_blank">Prof. Anna Reid</a></li>
-                        <li><a href="https://www.linkedin.com/in/chris-fields-a161855a/?originalSubdomain=au" target="_blank">Chris Fields</a></li>
-                        <li><a href="https://en.everybodywiki.com/Annavarapu_Ramaswamy" target="_blank">Dr. Annavarapu Ramaswamy</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Manda_Sudharani" target="_blank">Smt. Manda Sudharani</a></li>
+                        <li><a href="https://www.sydney.edu.au/music/about/our-people/academic-staff/anna-reid.html"
+                                target="_blank">Prof. Anna Reid</a></li>
+                        <li><a href="https://www.linkedin.com/in/chris-fields-a161855a/?originalSubdomain=au" target="_blank">Chris
+                                Fields</a></li>
+                        <li><a href="https://en.everybodywiki.com/Annavarapu_Ramaswamy" target="_blank">Dr. Annavarapu
+                                Ramaswamy</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Manda_Sudharani" target="_blank">Smt. Manda
+                                Sudharani</a></li>
                     </b>
                 </ul>
                 Join us on Zoom! Meeting ID:93778567222<br />
