--- a/Events.html
+++ b/Events.html
@@ -141,11 +141,29 @@
                     24th June to 26th June 2020 6.30 p.m. to 8 p.m       
                     Program Schedule</b>
                     <ul>
-                        <li>24th June 2020<br/>Smt Umaradha - Vocal Sri G.D. Phani Kumar - Flute, Smt Ch. Santhi - Vocal, Sri Hemadri Chandrakanth - Vocal, Sri P. Nandakumar - Vocal, Sri Sistla Natarajamurthy - Vocal, Smt Tulasi Viswanath - Vocal</li>
-                        <li>25th June 2020<br/>Smt Kanaka Durga - Veena, Smt Padma Govardhan - Vocal, Sri DVK Vasudevan - Violin, Smt BV Durgabhavani - Vocal, Sri G Sateeshbabu - Vocal, Smt P Janaki - Vocal</li>
-                        <li>26th June 2020<br/>Smt Kanaka Durga - Veena, Smt Padma Govardhan - Vocal, Sri DVK Vasudevan - Violin, Smt BV Durgabhavani - Vocal, Sri G Sateeshbabu - Vocal, Smt P Janaki - Vocal</li>
+                        <li><b>24th June 2020</b><br/>Smt Umaradha - Vocal Sri G.D. Phani Kumar - Flute, Smt Ch. Santhi - Vocal, Sri Hemadri Chandrakanth - Vocal, Sri P. Nandakumar - Vocal, Sri Sistla Natarajamurthy - Vocal, Smt Tulasi Viswanath - Vocal</li>
+                        <li><b>25th June 2020</b><br/>Smt Kanaka Durga - Veena, Smt Padma Govardhan - Vocal, Sri DVK Vasudevan - Violin, Smt BV Durgabhavani - Vocal, Sri G Sateeshbabu - Vocal, Smt P Janaki - Vocal</li>
+                        <li><b>26th June 2020</b><br/>Smt Amulya - Vocal, Kum M Srutiranjani - Vocal, Smt.Anjana Sudhakar- Vocal, Sri Modumudi Sudhakar - Vocal, Nadasudharnava Dr. Annavarapu Ramasamy - Viola</li>
                     </ul>
-                    
+                    <a href="https://us02web.zoom.us/j/86927294737" target="_blank">Click here to connect to Zoom Meeting</a>
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Swaranjali</mark></h5>
+            </td>
+        </tr>
+        <tr style="text-align:center;">
+            <td style="text-align:center;">
+                <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    src="images/Swaranjali.jpeg">
+            </td>
+            <td style="text-align:justify;">
+                <p>
+                    A musical tribute to Late Dr.Mangalampalli BalamuraliKrishna.
+                    More details on this event will be updated soon.<br/>
+                    <a href="https://us02web.zoom.us/j/7887129906" target="_blank">Click here to connect to Zoom Meeting</a>
                 </p>
             </td>
         </tr>
