--- a/index.html
+++ b/index.html
@@ -130,9 +130,20 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <a href="Events.html" target="_blank">
+              <a href="Events.html">
                 <img style="max-width:100%;max-height:100%;" src="images/ParupalliUtsavam.png">
-              </a>         
+              </a>
+              <p style="text-align:center;">
+                <a href="https://us02web.zoom.us/j/86927294737" target="_blank">Click here to connect to Zoom Meeting</a>
+              </p>
+            </div>
+            <div class="carousel-item">
+              <a href="Events.html">
+                <img style="max-width:100%;max-height:100%;" src="images/Swaranjali.jpeg">
+              </a>
+              <p style="text-align:center;">
+                <a href="https://us02web.zoom.us/j/7887129906" target="_blank">Click here to connect to Zoom Meeting</a>
+              </p>
             </div>
             <div class="carousel-item ">
               <div>
