updated our team

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -230,7 +230,7 @@
             the ‘Sangeetha Ratna’ course from the Music Academy, under the guidance of Sangeetha Kalanidhi
             B Rajam
             Iyer and S R Janakiraman.
-            It was during this time that she also trained undr Dr. M. Balamuralikrishna. Relocating to
+            It was during this time that she also trained under Dr. M. Balamuralikrishna. Relocating to
             Hyderabad,
             she learnt Carnatic Music
             from Sri Neti Rama Sharma and she and completed her post-graduation in Music from University of
