--- a/OurTeam.html
+++ b/OurTeam.html
@@ -124,19 +124,45 @@
                 <img src="images/DrPadma.png" class="card-img-top" style="height: 400px;width: 300px;">
             </div>
             <div class="col">
-
                 <img src="images/HOD.png" class="card-img-top" style="height: 400px;width: 300px;">
-
-
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/Group 7.svg" class="card-img-top" style="display:inline;margin:30px;padding-right: 50px;padding-left: 20px;">
+                <h4>Dr.Padma Govardhan</h4>
+                <i><b>Founder and Principal</b></i><br />
+                <p style="text-align:justify;padding: 10px;">
+                    Padma has been the head of Sangeetha Bharathi and founded it back in 2004.
+                    She has, to her credit, over 100 students and 15 graduates across New Zealand, Australia, India and
+                    USA.
+                    Dr. Padma is a Phd graduate in Carnatic music and has been performing for the past 30 years.
+                    Her aim is to spread the art of Carnatic music to as many people as possible and make it available
+                    to
+                    anyone who wants to learn.<br />
+                    <br/>Research Work: <a href="https://shodhganga.inflibnet.ac.in/handle/10603/90051" target="_blank"> An
+                        Indepth Study of Sankarabharana and Its Janya Ragas</a><br />
+                    LinkedIn : <a href="https://www.linkedin.com/in/dr-padma-govardhan-46915b35/" target="_blank">
+                        Venkata Padma Chitti</a><br />
+                    Facebook : <a href="https://www.facebook.com/padma.mallela.96" target="_blank">Contact on FB</a>
+                </p>
             </div>
             <div class="col">
-
-                <img src="images/Group 8.svg" class="card-img-top" style="display:inline;margin:30px;padding-left: 50px;">
+                <h4>Mr.Govardhan Mallela</h4>
+                <i><b>Founder and Managing Director</b></i><br />
+                <p style="text-align:justify;padding: 10px;">
+                    Govardhan Mallela is a Chartered Accountant and Managing Director of TASNZ Ltd. based in Auckland,
+                    New Zealand.
+                    He has been practicing in New Zealand for over 20 years and is first in line to be recognised as a
+                    contributer to the community.
+                    He takes active interest in community activities and has been the driving force behind the growth
+                    of Sangeetha Bharathi and all its activities.<br />
+                   <br/> Shows : <a href="https://www.planetaudio.org.nz/mallela-mala" target="_blank">Mallela Mala</a><br />
+                    LinkedIn : <a href="https://www.linkedin.com/in/govardhan-mallela-65069715/" target="_blank">Gordy
+                        Mallela</a><br />
+                    Youtube Channel : <a href="https://www.youtube.com/channel/UC50Dr79vFIvnj6Z10tigSGQ" target="_blank">Music
+                        events</a><br />
+                    Facebook : <a href="https://www.facebook.com/govardhan.mallela" target="_blank">Contact on FB</a><br />
+                </p>
             </div>
         </div>
         <div class="row">
@@ -152,22 +178,56 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/Group 9.svg" class="card-img-top" style="height:300px;width:25opx;">
+                <h4>Sridevi Chitti</h4>
+                <i><b>Music Teacher, India Chapter</b></i><br />
+                <p style="text-align:justify;padding: 10px;">
+                    Sridevi Chitti has been singing since her childhood.
+                    Her first guru was Dr. Padma Mallela. She did her Masters in
+                    Carnatic vocal music from Sri Potti Sriramulu Telugu University and is
+                    currently under the tutelage of Sri D.V Mohanakrishna (Disciple of Dr. Mangalampally
+                    Balamuralikrishna) in Hyderabad.
+                    She has been teaching music since past 15 years and heads the Hyderabad chapter of Sangeetha
+                    Bharathi.<br/>
+                    <br/>Youtube Channel:<a href="https://www.youtube.com/channel/UCNTH_5wQxYLBF1p_znjjhkg">Blissful Music</a>
+                    <br />Facebook:<a href="https://www.facebook.com/sridevi.chitti" target="_blank"> Contact on FB</a>
+                </p>
             </div>
             <div class="col">
-                <img src="images/Group 10.svg" class="card-img-top" style="height:300px;width:25opx;">
+                <h4>Vishnu Priya</h4>
+                <i><b>Music Teacher, Sweden Chapter</b></i><br />
+                <p style="text-align:justify;padding: 10px;">
+                    Vishnu Priya is a disciple of Padma Mallela and trained under Sangeetha Bharathi before
+                    completing her Graduate Diploma under Academy of fine Arts (London).
+                    She then underwent advanced training for 12 years under Dr. Mangalampally Balamuralikrishna
+                    and simultaneously trained under Dr. Radha Venkatachalam from Delhi.
+                    She currently heads the Sweden Chapter of Sangeetha Bharathi.<br/>
+                    <br/>Souncloud: <a href="https://soundcloud.com/vpmallela" target="_blank">Vishnu's works</a>
+                    <br/>Youtube Channel: <a href="https://www.youtube.com/user/p4mancegal/" target="_blank">Mind Music Soul</a>
+                    <br/>Aditya Music: <a href="https://youtu.be/Ou7JcOCNfos" target="_blank">Cover Art</a>
+                    <br/>Facebook: <a href="https://www.facebook.com/vishnupriya.mallela" target="_blank">Contact on FB</a>
+                </p>
             </div>
             <div class="col">
-                <img src="images/Group 11.svg" class="card-img-top" style="height:300px;width:25opx;">
+                <h4>Balu Mallela</h4>
+                <i>M<b>usic Teacher, Sydney Chapter</b></i><br />
+                <p style="text-align:justify;padding: 10px;">
+                    Balu Mallela is currently pursuing a Medical degree at University of Sydney, Australia.
+                    He is a Vocalist in Carnatic music and is also adept in playing mridangam and ghatam.
+                    He has learnt for the past 15 years under Sangeetha Bharathi and graduated with a
+                    Graduate Diploma in music from the Academy of Fine Arts (London).
+                    He currently teaches students in Sydney and online on Skype.<br/>
+                    <br/>Youtube: <a href="https://youtu.be/w9gsEqJ7yik" target="_blank">Balu's Works</a>
+                    <br/>Facebook: <a href="https://www.facebook.com/VMPBM.Balu" target="_blank">Contact on FB</a>
+                </p>
             </div>
         </div>
     </div>
 
     <!-- FOOTER -->
     <footer class="container-fluid">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-          </footer>
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
     </main>
 
 
