Fixed some bugs
Navigation on all pages now work.

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -16,6 +16,11 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet'>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+    <script src="assets/dist/js/bootstrap.bundle.js"></script>
+
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -97,8 +102,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="OurTeam.html" style="color:#FFFFFF;">OUR TEAM</a>
+                    <li class="nav-item dropdown">
+                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeamE" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            OUR TEAM
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
+                            <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
+                            <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
@@ -131,7 +143,8 @@
                 We started off as a school back in 2004 with 30 students in a small house. Our motto is to provide
                 students their own opportunities and not having to ask other people for chances to sing. We also wanted
                 to provide a concert platform for students of Sangeetha Bharathi to gain experience in singing infront
-                of a crowd in order to naturally increase their inner sponteinity. Today, with over 15 students with a "Diploma
+                of a crowd in order to naturally increase their inner sponteinity. Today, with over 15 students with a
+                "Diploma
                 in music", Sangeetha Bharathi continues to train with the same integrity and commitment to produce
                 quality music.</p>
         </div>
@@ -182,8 +195,8 @@
                         <br />Guruvula guruvula guruve Venkata
                         <br />Vara subbayya maaku
                         <br />Parama guruvu Dakshinamurthy
-                        <br />Maa guruve Ramakrishna 
-                        <br />Murali ravali roopamane Sat 
+                        <br />Maa guruve Ramakrishna
+                        <br />Murali ravali roopamane Sat
                         <br />Bhavame mahabhagyamu raa"
                     </p>
                     <i>- Dr.Mangalampally Balamuralikrishna</i>
