--- a/OurTeam.html
+++ b/OurTeam.html
@@ -16,6 +16,11 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet'>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+    <script src="assets/dist/js/bootstrap.bundle.js"></script>
+
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -95,8 +100,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="OurTeam.html" style="color:#FFFFFF;">OUR TEAM</a>
+                <li class="nav-item dropdown">
+                    <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeamE" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        OUR TEAM
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
+                        <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
+                        <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
@@ -139,7 +151,8 @@
                     Her aim is to spread the art of Carnatic music to as many people as possible and make it available
                     to
                     anyone who wants to learn.<br />
-                    <br/>Research Work: <a href="https://shodhganga.inflibnet.ac.in/handle/10603/90051" target="_blank"> An
+                    <br />Research Work: <a href="https://shodhganga.inflibnet.ac.in/handle/10603/90051" target="_blank">
+                        An
                         Indepth Study of Sankarabharana and Its Janya Ragas</a><br />
                     LinkedIn : <a href="https://www.linkedin.com/in/dr-padma-govardhan-46915b35/" target="_blank">
                         Venkata Padma Chitti</a><br />
@@ -156,7 +169,7 @@
                     contributer to the community.
                     He takes active interest in community activities and has been the driving force behind the growth
                     of Sangeetha Bharathi and all its activities.<br />
-                   <br/> Shows : <a href="https://www.planetaudio.org.nz/mallela-mala" target="_blank">Mallela Mala</a><br />
+                    <br /> Shows : <a href="https://www.planetaudio.org.nz/mallela-mala" target="_blank">Mallela Mala</a><br />
                     LinkedIn : <a href="https://www.linkedin.com/in/govardhan-mallela-65069715/" target="_blank">Gordy
                         Mallela</a><br />
                     Youtube Channel : <a href="https://www.youtube.com/channel/UC50Dr79vFIvnj6Z10tigSGQ" target="_blank">Music
@@ -187,8 +200,9 @@
                     currently under the tutelage of Sri D.V Mohanakrishna (Disciple of Dr. Mangalampally
                     Balamuralikrishna) in Hyderabad.
                     She has been teaching music since past 15 years and heads the Hyderabad chapter of Sangeetha
-                    Bharathi.<br/>
-                    <br/>Youtube Channel:<a href="https://www.youtube.com/channel/UCNTH_5wQxYLBF1p_znjjhkg">Blissful Music</a>
+                    Bharathi.<br />
+                    <br />Youtube Channel:<a href="https://www.youtube.com/channel/UCNTH_5wQxYLBF1p_znjjhkg">Blissful
+                        Music</a>
                     <br />Facebook:<a href="https://www.facebook.com/sridevi.chitti" target="_blank"> Contact on FB</a>
                 </p>
             </div>
@@ -200,11 +214,13 @@
                     completing her Graduate Diploma under Academy of fine Arts (London).
                     She then underwent advanced training for 12 years under Dr. Mangalampally Balamuralikrishna
                     and simultaneously trained under Dr. Radha Venkatachalam from Delhi.
-                    She currently heads the Sweden Chapter of Sangeetha Bharathi.<br/>
-                    <br/>Souncloud: <a href="https://soundcloud.com/vpmallela" target="_blank">Vishnu's works</a>
-                    <br/>Youtube Channel: <a href="https://www.youtube.com/user/p4mancegal/" target="_blank">Mind Music Soul</a>
-                    <br/>Aditya Music: <a href="https://youtu.be/Ou7JcOCNfos" target="_blank">Cover Art</a>
-                    <br/>Facebook: <a href="https://www.facebook.com/vishnupriya.mallela" target="_blank">Contact on FB</a>
+                    She currently heads the Sweden Chapter of Sangeetha Bharathi.<br />
+                    <br />Souncloud: <a href="https://soundcloud.com/vpmallela" target="_blank">Vishnu's works</a>
+                    <br />Youtube Channel: <a href="https://www.youtube.com/user/p4mancegal/" target="_blank">Mind
+                        Music Soul</a>
+                    <br />Aditya Music: <a href="https://youtu.be/Ou7JcOCNfos" target="_blank">Cover Art</a>
+                    <br />Facebook: <a href="https://www.facebook.com/vishnupriya.mallela" target="_blank">Contact on
+                        FB</a>
                 </p>
             </div>
             <div class="col">
@@ -215,9 +231,9 @@
                     He is a Vocalist in Carnatic music and is also adept in playing mridangam and ghatam.
                     He has learnt for the past 15 years under Sangeetha Bharathi and graduated with a
                     Graduate Diploma in music from the Academy of Fine Arts (London).
-                    He currently teaches students in Sydney and online on Skype.<br/>
-                    <br/>Youtube: <a href="https://youtu.be/w9gsEqJ7yik" target="_blank">Balu's Works</a>
-                    <br/>Facebook: <a href="https://www.facebook.com/VMPBM.Balu" target="_blank">Contact on FB</a>
+                    He currently teaches students in Sydney and online on Skype.<br />
+                    <br />Youtube: <a href="https://youtu.be/w9gsEqJ7yik" target="_blank">Balu's Works</a>
+                    <br />Facebook: <a href="https://www.facebook.com/VMPBM.Balu" target="_blank">Contact on FB</a>
                 </p>
             </div>
         </div>
