--- a/Events.html
+++ b/Events.html
@@ -14,6 +14,11 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet'>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+    <script src="assets/dist/js/bootstrap.bundle.js"></script>
+
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -102,7 +107,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
                             <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
-                            <a class="dropdown-item" href="Events.html">VIEW OUR PAST EVENTS</a>
+                            <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
                         </div>
                     </li>
                     <li class="nav-item">
