Updated Background and events page

--- a/Events.html
+++ b/Events.html
@@ -140,8 +140,15 @@
                 <p>
                     A musical tribute to Late Dr.Mangalampalli BalamuraliKrishna.
                     More details on this event will be updated soon.<br />
-                    <a href="https://us02web.zoom.us/j/7887129906" target="_blank">Click here to connect to Zoom
-                        Meeting</a>
+                    <a href="https://us02web.zoom.us/j/7887129906" style="color:rgb(40, 40, 153);" target="_blank">
+                        <h4 style="font-family:Alegreya;text-align:center;">Connect
+                          to Zoom Meeting</h4>
+                      </a>
+                    
+                      <a href="https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ" style="color:rgb(40, 40, 153);" target="_blank">
+                        <h4 style="font-family:Alegreya;text-align:center;">Connect
+                          on YouTube</h4>
+                      </a>
                 </p>
             </td>
         </tr>
