--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <link href="carousel.css" rel="stylesheet">
 </head>
 
-<body style="font-family:'Lato';">
+<body style="font-family:'Lato';background-image:linear-gradient(#272727,#686565);">
 
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#272727;opacity: 0.8;">
     <div class="container-fluid">
@@ -128,13 +128,21 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            
+
             <div class="carousel-item active">
               <a href="Events.html">
-                <img style="max-width:100%;max-height:100%;" src="images/Swaranjali.jpeg">
+                <img style="max-width:175%;max-height:175%;border:10px solid rgb(87, 84, 84)" src="images/Swaranjali.jpeg">
               </a>
-              <p style="text-align:center;">
-                <a href="https://us02web.zoom.us/j/7887129906" target="_blank">Click here to connect to Zoom Meeting</a>
+              <p>
+                <a href="https://us02web.zoom.us/j/7887129906" style="color:white;opacity: 0.7;" target="_blank">
+                  <h4 style="font-family:Alegreya;text-align:center;">Connect
+                    to Zoom Meeting</h4>
+                </a>
+              
+                <a href="https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ" style="color:white;opacity: 0.7;" target="_blank">
+                  <h4 style="font-family:Alegreya;text-align:center;">Connect
+                    on YouTube</h4>
+                </a>
               </p>
             </div>
             <div class="carousel-item ">
