Uopdated event details

--- a/Events.html
+++ b/Events.html
@@ -137,19 +137,50 @@
                     src="images/Swaranjali.jpeg">
             </td>
             <td style="text-align:justify;">
-                <p>
-                    A musical tribute to Late Dr.Mangalampalli BalamuraliKrishna.
-                    More details on this event will be updated soon.<br />
-                    <a href="https://us02web.zoom.us/j/7887129906" style="color:rgb(40, 40, 153);" target="_blank">
-                        <h4 style="font-family:Alegreya;text-align:center;">Connect
-                          to Zoom Meeting</h4>
-                      </a>
-                    
-                      <a href="https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ" style="color:rgb(40, 40, 153);" target="_blank">
-                        <h4 style="font-family:Alegreya;text-align:center;">Connect
-                          on YouTube</h4>
-                      </a>
-                </p>
+                <ul>
+                    <li>
+                        Shri.Annavarapu Ramaswamy - Speech</li><li>
+                        Sravani & Sudheeksha - Aabala Gopalam & Ganadhipam
+                    </li>
+                    <li>
+                        Balu Mallela - Thamra Lochani & OmKaaraakaarini</li><li>
+                        Mrs.Pratyusha - Saragunagaavumu & Sarasaangi
+                    </li>
+                    <li>
+                        Mrs.Sridevi - Akhiladevanuthe - Megharanjani & O Paradevi - Mohana
+                    </li>
+                        <li>
+                        Mrs.Vishnu Priya - Sogasu nee Sommu & Ganarasike
+                    </li>
+                    <li>
+                            Mrs.Thulasi Viswanath - Amma anandadaayini & Natabhairavi - Nalina nayani
+                    </li><li>
+                            Mrs.Durgabhavani - Vasama - Dharmavati & Ragavardhini - Ganasudha rasam
+                        </li><li>
+                            Shri.Modumudi Sudhakar - Bhavame mahabhaagyamura & Chandrika
+                        </li>
+                    <li>
+                            Shri.D.V.Mohana Krishna - Tharani raaga kirthana & Bahudaari Thillana
+                        </li>
+                    <li>
+                             Purnima - Brundavani thillana,
+                            Mahati - Sri Sakala ganaadhipa,
+                            Sreya Durvasula - Brundavani thillana
+                    </li>
+                </ul>&nbsp;
+                <button style="border-radius: 14px;">
+                <a href="https://us02web.zoom.us/j/7887129906" style="color:rgb(40, 40, 153);" target="_blank">
+                    Connect to Zoom Meeting
+                </a>
+            </button>
+                &nbsp;
+            <button style="border-radius: 14px;">
+                <a href="https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ" style="color:rgb(40, 40, 153);"
+                    target="_blank">
+                    Connect on YouTube
+                </a>
+            </button>
+
             </td>
         </tr>
         <tr style="text-align:center;">
