--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     to Zoom Meeting</h4>
                 </a>
               
-                <a href="https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ" style="color:white;opacity: 0.7;" target="_blank">
+                <a href="https://www.youtube.com/watch?v=uUsKsmggEBY" style="color:white;opacity: 0.7;" target="_blank">
                   <h4 style="font-family:Alegreya;text-align:center;">Connect
                     on YouTube</h4>
                 </a>
@@ -208,10 +208,10 @@
                       <p style="font-family:'Alegreya';font-size:3vw;color:#FFFFFF;text-align: center;">
                         <b>Spreading Our Wings
                       </p>
-                      <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
-                        <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back
-                          <br />at Auckland, Newzealand. Over the years, it grew like a river with a prestige that
-                          <br />students live music when they learn at Sangeetha Bharathi.</i>
+                      <p style="font-family:'Alegreya';color:#FFFFFF;font-size:1.5vw;text-align: center;">
+                        <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back in Auckland, New Zealand. 
+                          <br/>Over the years, it grew like a river with a prestige that students live music when they learn at Sangeetha Bharathi. 
+                          <br/>Now Sangeetha Bharathi has more then 100 students spread across oceans and learning music with devotion and dedication.</i>
                         </b>
                       </p>
                     </div>
