--- a/Events.html
+++ b/Events.html
@@ -175,7 +175,7 @@
             </button>
                 &nbsp;
             <button style="border-radius: 14px;">
-                <a href="https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ" style="color:rgb(40, 40, 153);"
+                <a href="https://www.youtube.com/watch?v=uUsKsmggEBY" style="color:rgb(40, 40, 153);"
                     target="_blank">
                     Connect on YouTube
                 </a>
