Updated events and landing pages

--- a/Events.html
+++ b/Events.html
@@ -168,16 +168,11 @@
                             Sreya Durvasula - Brundavani thillana
                     </li>
                 </ul>&nbsp;
-                <button style="border-radius: 14px;">
-                <a href="https://us02web.zoom.us/j/7887129906" style="color:rgb(40, 40, 153);" target="_blank">
-                    Connect to Zoom Meeting
-                </a>
-            </button>
-                &nbsp;
+                
             <button style="border-radius: 14px;">
                 <a href="https://www.youtube.com/watch?v=uUsKsmggEBY" style="color:rgb(40, 40, 153);"
                     target="_blank">
-                    Connect on YouTube
+                    Listen on YouTube
                 </a>
             </button>
 
