--- a/index.html
+++ b/index.html
@@ -128,8 +128,15 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-
             <div class="carousel-item active">
+              <div class="centered">
+              Just in time for Sravana Maasam - Varalakshmi
+              <iframe width="1250" height="900" src="https://www.youtube.com/embed/bwlV6Au1gUo" frameborder="0" 
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+              style="box-shadow: 2px 2px 3px rgb(65, 63, 63);border-radius: 14px;"></iframe>
+            </div>
+          </div>
+            <div class="carousel-item">
               <div>
 
                 <a href="AboutUs.html">
