--- a/Events.html
+++ b/Events.html
@@ -128,6 +128,25 @@
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
         <tr>
             <td colspan="2">
+                <h5><mark>Mallela Maala - Sravana Maasam Special</mark></h5>
+                <i>By Dr.Padma Govardhan & VishnuPriya</i>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bwlV6Au1gUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen style="box-shadow: 2px 2px 3px pink;border-radius: 14px;"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />Mallela Maala is a weekly radio program focusing on a different musician, 
+                actor or film each week, providing insights into some of your favourite Telugu tracks. 
+                <br /><br />This program also focusses on special occasions and festivals to present great musical treats to listeners.
+                <br /><br />Varalakshmi Sravana special program has great songs sung by  Dr.Padma
+                Govardhan and VishnuPriya.
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
                 <h5><mark>Swaranjali</mark></h5>
             </td>
         </tr>
