--- a/Events.html
+++ b/Events.html
@@ -128,6 +128,23 @@
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
         <tr>
             <td colspan="2">
+                <h5><mark>Gayathri Mahila Sangeetha Sanmandali Concert</mark></h5>
+                <i>By Dr.Padma Govardhan</i>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    src="images/Event092020.jpeg">
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />Sree Veena Kuppayyar krithis will be presented by Dr.Padma Govardhan at this event.
+                <br /><br />Join us on September 20th at 5:45 PM IST to enjoy the concert.
+                <br /><br /><a href="https://zoom.us/j/88686195408">https://zoom.us/j/88686195408</a>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
                 <h5><mark>Mallela Maala - Sravana Maasam Special</mark></h5>
                 <i>By Dr.Padma Govardhan & VishnuPriya</i>
             </td>
