--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <div class="centered">
+              <div class="centered embed-responsive embed-responsive-1by1">
               Swara Raaga Sudha - Soulful Music
-              <iframe width="1250" height="900" src="https://www.youtube.com/embed/KNky3NJMSQo" frameborder="0" 
+              <iframe class="embed-responsive-item" width="1250" height="900" src="https://www.youtube.com/embed/KNky3NJMSQo" frameborder="0" 
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
               style="box-shadow: 2px 2px 3px rgb(65, 63, 63);border-radius: 14px;"></iframe>
             </div>
@@ -175,7 +175,7 @@
             <div class="carousel-item">
               <div>
                 <a href="OurTeam.html">
-                  <img src="images/Spread.jpg" style="height: 900px;width:1250px;">
+                  <img src="images/Spread.jpg" class="img-fluid" style="height: 900px;width:1250px;">
                   <div class="centered">
                     <div class="transbox" style="display: block;position: relative;height: 1100px;width:1250px;">
                       <br />
