--- a/index.html
+++ b/index.html
@@ -128,7 +128,13 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
+              <div class="carousel-item active">
+                  <div class="centered embed-responsive embed-responsive-1by1">
+                  Gandhi Jayanthi Special
+                  <iframe class="embed-responsive-item" width="1250" height="900" src="https://www.youtube.com/embed/miT8r31Z5SY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </div>
+            <div class="carousel-item ">
               <div class="centered embed-responsive embed-responsive-1by1">
               Swara Raaga Sudha - Soulful Music
               <iframe class="embed-responsive-item" width="1250" height="900" src="https://www.youtube.com/embed/KNky3NJMSQo" frameborder="0" 
