--- a/Events.html
+++ b/Events.html
@@ -144,6 +144,28 @@
             </td>
         </tr>
         <tr>
+                <td colspan="2">
+                    <h5><mark>Global Rudra Parayana Concert</mark></h5>
+                    <i>By Dr.Padma Govardhan <small>accompanied by Balu Mallela</small></i>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                        src="images/ConcertRudra.jpeg">
+                </td>
+                <td style="vertical-align:center;text-align:justify;">
+                    <br /><br />Musical offering by Dr.Padma Govardhan at this event.
+                    <br/><br/>
+                <button style="border-radius: 14px;">
+                        <a href="https://youtu.be/PAP88TPE_T4" style="color:rgb(40, 40, 153);"
+                            target="_blank">
+                            Listen on YouTube
+                        </a>
+                    </button>
+                </td>
+            </tr>
+        <tr>
             <td colspan="2">
                 <h5><mark>Mallela Maala - Sravana Maasam Special</mark></h5>
                 <i>By Dr.Padma Govardhan & VishnuPriya</i>
@@ -160,6 +182,13 @@
                 <br /><br />This program also focusses on special occasions and festivals to present great musical treats to listeners.
                 <br /><br />Varalakshmi Sravana special program has great songs sung by  Dr.Padma
                 Govardhan and VishnuPriya.
+                <br/><br/>
+                <button style="border-radius: 14px;">
+                        <a href="https://www.youtube.com/embed/bwlV6Au1gUo" style="color:rgb(40, 40, 153);"
+                            target="_blank">
+                            Listen on YouTube
+                        </a>
+                    </button>
             </td>
         </tr>
         <tr>
@@ -296,6 +325,13 @@
                 today.
                 <br /><br /><br />Janaranjani Varnam by Tiger K.Varadaacharyulu was one of the many gems that Dr.Padma
                 Govardhan has given to the world of Carnatic Music.
+                <br/><br/>
+                <button style="border-radius: 14px;">
+                        <a href="https://www.youtube.com/embed/Cn-W75cDoKo" style="color:rgb(40, 40, 153);"
+                            target="_blank">
+                            Listen on YouTube
+                        </a>
+                    </button>
             </td>
         </tr>
         <tr>
@@ -317,8 +353,13 @@
                 <br /><br /><br /><br />This event has been recorded.
                 <br />Please enjoy the event with link provided here.
                 <br />
-                <a href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925"
-                    target="_blank"> Click here </a>
+                    <br/>
+                <button style="border-radius: 14px;">
+                        <a href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925" style="color:rgb(40, 40, 153);"
+                            target="_blank">
+                            Listen to Zoom Recording
+                        </a>
+                    </button>
             </td>
         </tr>
     </table>
