Added Photos Page

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -110,6 +110,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
                             <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
                             <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
+                            <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
                         </div>
                     </li>
                     <li class="nav-item">
