--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
               <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
               <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
+              <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
             </div>
           </li>
           <li class="nav-item">
